--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,13 +8,22 @@
 		<title>Phone App</title>
   	</head>
   	<body>
-    	<div id="root" class="container-fluid" style="margin: top 10px;">
+    	<div class="container" style="margin-top: 20px;">
+				<div class="card">
+					<div class="card-header">
+						<h5 class="text-center">
+							Phonebook Application
+						</h5>
+					</div>
+					<div class="card-body" id="root">
 
-		</div>
+					</div>
+				</div>
+			</div>
 
-		<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-		integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
-		</script>-->
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+			integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
+			</script>
   	</body>
 </html>
